# main

./: README.md
nlp/: Dockerfile  convert_onnx.py  nlp_main.py  onnx_test.py  pyproject.toml  감성분석_최종훈련코드.ipynb
pipeline/: config.py  pipe_main.py  pipeline.py  pyproject.toml  rec_df.csv
recommend/: 코사인유사도_추천시스템.ipynb
yolo/: YOLOv5_finetuning.ipynb  detect.py  pyproject.toml  yolo_main.py
yolo/data/: koreafood.yaml
yolo/segment/: train.py
