[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
onnxruntime = "^1.15.1"
onnx = "^1.14.0"
pandas = "^2.0.2"
transformers = "^4.30.2"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
